made conficilt with index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>GitHub Group Tutorial</title>
   </head>
   <body>
-    <a href="my-page.html">First's Page</a>
+    <a href="my-page-braxton-boe.html">First's Page</a>
   </body>
 </html>
