--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>GitHub Group Tutorial</title>
   </head>
   <body>
-    <a href="my-page-braxton-boe.html">Your New Page</a>
-    <a href="my-page-matthew-evans.html">Your New Page</a>
-    <a href="my-page-alexander-templin.html">Your New Page</a>
+    <a href="my-page-Josh-Pfaff.html">Your New Page</a>
   </body>
 </html>
